fix: xss, layout bugs

--- a/404.html
+++ b/404.html
@@ -115,7 +115,7 @@
         </div>
     </header>
     <main class="flex-shrink-0 pb-5 pt-4">
-        <div class="align-items-center p-5 my-5" id="loading-screen">
+        <div class="align-items-center p-5 my-5">
             <div class="row">
 
                 <div class="col-md-12 text-center">
