--- a/about.html
+++ b/about.html
@@ -126,7 +126,7 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="my-3 p-3 bg-body shadow-sm">
-                            <h4>Description</h4>
+                            <h4></h4>
                             <br>
                             <h6>
                                 AS400671 (AS-STYPR) is a multi-purpose Internet Service Provider(ISP) that provides secure service operations, security researches, and network managements.<br><br>
@@ -146,16 +146,16 @@
                                 For the list of interconnected exchange points, please refer to <a href="/#exchanges">Exchanges</a> for more details.
                                 <br><br>
 
-                                To peer with AS400671, you must meet the following requirements:
+                                To peer with AS400671, you must meet the following requirements.<br>
+                                Not following conditions are subject to termination without notice.
                                 <br><br>
                                 <ul>
-                                    <li>AS must be valid and public.</li>
-                                    <li>AS must be announcing its own prefixes only.</li>
-                                    <li>AS must announce at least one or more legitimate prefixes.</li>
-                                    <li>There needs to be at least one or more exchange points we have in common.</li>
+                                    <li>ASN must be valid and public.</li>
+                                    <li>ASN must announce at least one or more legitimate prefixes.</li>
+                                    <li>PeeringDB entries must be up to date.</li>
+                                    <li>Announced prefixes must be legitimate, valid, and public.</li>
                                 </ul>
 
-                                Any peering connections are subject to termination without notice.<br>
                                 Please contact <a href="#">serv<span class="d-none">digial-server</span>er+peering&#64;s<span class="d-none">sty</span>typr.com</a> (<a href="//harold.kim/pubkey.asc">pgp</a>) for any inquiries regarding the peering policy.
                                 <br>
                             </h6>
