--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                     </div>
                     <div class="col-md-12 text-center">
                         <br>
-                        <small>Fetching new information from PoPs.. Please wait!</small>
+                        <small>Fetching latest information from PoPs.. Please wait!</small>
                     </div>
                 </div>
             </div>
