--- a/services.html
+++ b/services.html
@@ -123,20 +123,22 @@
                             <h1 class="h2">Provided Services</h1>
                         </div>
                     </div>
-                    <div class="row">
+                    <div class="row pt-3">
                         <div class="col-md-4">
                             <div class="card bg-body rounded-0 shadow-sm">
-                                <div class="card-header py-3">
-                                <h4 class="my-0 fw-normal">IP Lease</h4>
+                                    <div class="card-header py-3">
+                                    <h4 class="my-0 fw-normal">IPv6 Lease</h4>
                                 </div>
-                                <div class="card-body">
-                                <h1 class="card-title pricing-card-title">$5<small class="text-muted fw-light">/mo</small></h1>
-                                <ul class="list-unstyled mt-3 mb-4">
-                                    <li>Providing IPv6 /48 address spaces</li>
-                                    <li>For customers</li>
-                                    <li>Best-effort support</li>
-                                </ul>
-                                <button type="button" class="w-100 btn btn-lg btn-outline-primary disabled">Request</button>
+                                    <div class="card-body">
+                                    <h1 class="card-title pricing-card-title">$10<small class="text-muted fw-light">/mo</small></h1>
+                                    <ul class="list-unstyled mt-3 mb-4">
+                                        <li>Providing IPv6 /48 address spaces</li>
+                                        <li>Exclusively available for business customers</li>
+                                        <li> &nbsp;</li>
+                                    </ul>
+                                    <button type="button" class="w-100 btn btn-lg btn-outline-primary" onclick="location.href='mailto:server%2blease&#64;stypr.com';">
+                                        Contact Operator
+                                    </button>
                                 </div>
                             </div>
                         </div>
@@ -152,7 +154,7 @@
                                     <li>1Gbps &middot; Fair Use Policy</li>
                                     <li>Best-effort support</li>
                                 </ul>
-                                <button type="button" class="w-100 btn btn-lg btn-outline-primary disabled">Contact Support</button>
+                                <button type="button" class="w-100 btn btn-lg btn-outline-primary disabled">Out of Stock</button>
                                 </div>
                             </div>
                         </div>
@@ -170,15 +172,6 @@
                                 </ul>
                                 <button type="button" class="w-100 btn btn-lg btn-primary disabled">Request Access</button>
                                 </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-12">
-                            <div class="my-3 p-3 bg-body shadow-sm">
-                                <h4>Description</h4>
-                                <br>
-                                <h6>
-                                    Service Under Construction... <br><br>
-                                </h6>
                             </div>
                         </div>
                     </div>
